# portapkg-py

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  portapkg.py  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: changelog.md  cli.md  configuration.md  development.md  export.md  faq.md  index.md  realworld.md  standalone.md  troubleshooting.md  usage.md
docs/stylesheets/: extra.css
logs/: 01-initial-bundle-failure.md  02-pefile-missing.md  03-pycparser-missing.md  04-success.md
portapkg/: cli.py
portapkg/bundler/: fetch.py  manifest.py  resolver.py
portapkg/installer/: install.py  platform.py
site/: 404.html  index.html  sitemap.xml
site/changelog/: index.html
site/cli/: index.html
site/configuration/: index.html
site/development/: index.html
site/export/: index.html
site/faq/: index.html
site/realworld/: index.html
site/search/: search_index.json
site/standalone/: index.html
site/stylesheets/: extra.css
site/troubleshooting/: index.html
site/usage/: index.html
tests/: conftest.py  test_cli.py  test_fetch.py  test_install.py  test_manifest.py  test_platform.py  test_resolver.py  test_standalone.py
