[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "portapkg"
version = "0.3.0"
description = "Portable, offline-friendly Python package bundler and installer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "portapkg"},
]

[project.scripts]
portapkg = "portapkg.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["portapkg*"]

[tool.setuptools.package-data]
portapkg = ["py.typed"]

[tool.ruff]
target-version = "py39"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
